--- a/themes/foundation/css/bbcode.css
+++ b/themes/foundation/css/bbcode.css
@@ -2,3 +2,11 @@ body, td, pre {
     font-family: "Helvetica Neue",Helvetica,Roboto,Arial,sans-serif;
     font-size: 1rem;
 }
+
+.post-type .codesnippet {
+    font-family: "Courier New", Courier, monospace, serif;
+    background-color: #fff;
+    padding: 5px;
+    border-left: 3px solid #666;
+    font-size: 12px;
+}
