--- a/themes/foundation/css/bbcode.css
+++ b/themes/foundation/css/bbcode.css
@@ -3,6 +3,7 @@ body, td, pre {
     font-size: 1rem;
 }
 
+.codeStyle,
 .post-type .codesnippet {
     font-family: "Courier New", Courier, monospace, serif;
     background-color: #fff;
