--- a/themes/foundation/css/editor.less
+++ b/themes/foundation/css/editor.less
@@ -1,7 +1,3 @@
-@BgVerticalPosition: @BackgroundVerticalPosition;
-@BgImage: @BackgroundImage;
-@ElementLinkImage: @DefaultElementImage;
-
 @headerColor: inherit;
 @linkColor: #d9d9d9;
 @BlizzgameColor: #333d4f;
@@ -12,25 +8,27 @@
 .chronicle-section {
   article {
     background-color: @BlizzgameColor;
-    background-image: url(@BgImage);
     background-size: cover;
     background-repeat: no-repeat;
     color: #fff;
   }
 }
 
-.description {
-  color: rgb(128, 128, 0);
-}
-.say {
-  color: rgb(248, 251, 170);
-}
-.cry {
-  color: rgb(250, 0, 0);
-}
-.wisper {
-  color: rgb(235, 180, 212);
-}
-.action {
-  color: rgb(241, 117, 47);
+span,
+p {
+  .description {
+    color: rgb(128, 128, 0);
+  }
+  .say {
+    color: rgb(248, 251, 170);
+  }
+  .cry {
+    color: rgb(250, 0, 0);
+  }
+  .wisper {
+    color: rgb(235, 180, 212);
+  }
+  .action {
+    color: rgb(241, 117, 47);
+  }
 }
