--- a/themes/foundation/css/Forum.css
+++ b/themes/foundation/css/Forum.css
@@ -1399,6 +1399,15 @@ input#search-text {
     font-size: 12px
 }
 
+.post-type q {
+    margin: 0.5rem;
+    padding: 1rem;
+    border: 1px solid #ddd;
+    line-height: 1.6;
+    color: #6f6f6f;
+    display: block;
+}
+
 .MultiFile-intercepted h2 {
     font-size: 18px
 }
