--- a/themes/foundation/css/Forum.css
+++ b/themes/foundation/css/Forum.css
@@ -649,6 +649,11 @@ h2.page-title, h2.post-title {
     margin-top: 22px
 }
 
+.forum-footer .element-link-image,
+.component-forum-footer .element-link-image {
+    margin-right: 0;
+}
+
 .forum-breadcrumbs {
     font-size: 13px
 }
