--- a/themes/foundation/css/Forum.css
+++ b/themes/foundation/css/Forum.css
@@ -653,6 +653,14 @@ h2.page-title, h2.post-title {
 .component-forum-footer .element-link-image {
     margin-right: 0;
 }
+.forum-footer .inline-list {
+    margin-left: 0;
+}
+
+.forum-footer .inline-list>li {
+    margin-right: 0.5rem;
+    margin-left: 0;
+}
 
 .forum-breadcrumbs {
     font-size: 13px
@@ -685,7 +693,7 @@ h2.page-title, h2.post-title {
 }
 
 .forum-topics.forum-sticky-topics {
-    border-color: #f4f4f4;
+    border-color: #fff;
     border-style: solid;
     border-width: 2px 20px
 }
