--- a/themes/foundation/css/hots.css
+++ b/themes/foundation/css/hots.css
@@ -18,7 +18,7 @@
   color: #fff;
   text-shadow: 0 0 1rem #009cff;
   word-wrap: break-word;
-  width: 80px;
+  width: 90px;
 }
 .hero-thumbnail {
   list-style-type: none;
@@ -27,7 +27,7 @@
   background: #0097ad;
   background: linear-gradient(#0097ad, #5a54e5);
   display: inline-block;
-  margin: 0.35rem;
+  margin: auto;
   position: relative;
 }
 
