Zato: а можно ссылку сделать белой? (виджет героев)

--- a/themes/foundation/css/common.css
+++ b/themes/foundation/css/common.css
@@ -106,6 +106,7 @@
 }
 
 #heroes-section.panel p,
+#heroes-section.panel a,
 #heroes-section.blizzgame-panel li,
 #heroes-section.panel dl {
     color: #fff;
