--- a/themes/foundation/css/common.css
+++ b/themes/foundation/css/common.css
@@ -112,6 +112,9 @@
     color: #fff;
 }
 
+#heroes-section.panel a {
+    text-decoration: underline;
+}
 #heroes-section .page__title {
     font-family: "Metronic", "Myriad Pro", Myriad, Arial, sans-serif;
     font-weight: 700;
