--- a/themes/foundation/css/common.css
+++ b/themes/foundation/css/common.css
@@ -151,6 +151,7 @@ li .th p {
 .blizzgame-panel .gallery-list .th {
     border: solid 4px rgba(22, 35, 49, 0.51);
     box-shadow: 0 0 0 1px rgba(250, 250, 250, 0.2);
+    transition: opacity 0.6s linear;
 }
 .blizzgame-panel .gallery-list .th p {
     background-color: rgba(22, 35, 49, 0.51);
