--- a/themes/foundation/css/common.css
+++ b/themes/foundation/css/common.css
@@ -79,10 +79,11 @@
     float: left;
     width: 100%;
 }
-
-.home-page-content {
-    float: left;
-    padding: 20px;
+@media only screen and (min-width: 64.063em) {
+    .home-page-content {
+        float: left;
+        padding: 20px;
+    }
 }
 
 .blizzgame-panel {
