--- a/themes/foundation/css/common.css
+++ b/themes/foundation/css/common.css
@@ -105,6 +105,8 @@
 #heroes-section {
     background-color: transparent;
     background-size: cover;
+    min-height: 500px;
+    height: auto;
 }
 
 #heroes-section.panel p,
