--- a/themes/foundation/css/common.css
+++ b/themes/foundation/css/common.css
@@ -105,7 +105,7 @@
 #heroes-section {
     background-color: transparent;
     background-size: cover;
-    min-height: 500px;
+    float: left;
     height: auto;
 }
 
