--- a/themes/foundation/css/hots.css
+++ b/themes/foundation/css/hots.css
@@ -181,6 +181,12 @@
 .hero-thumbnail__link.sylvanas {
   background-position: 0 -2448px;
 }
+.hero-thumbnail__link.kaelthas {
+  background-position: 0 -2520px;
+}
+.hero-thumbnail__link.johanna {
+  background-position: 0 -2592px;
+}
 
 .hero-thumbnail__link {
   width: 64px;
