--- a/themes/foundation/css/hots.css
+++ b/themes/foundation/css/hots.css
@@ -191,7 +191,7 @@
 .hero-thumbnail__link {
   width: 64px;
   height: 72px;
-  background: #0d0119 url("../images/heroes/thumbnails-64.jpg");
+  background: #0d0119 url("../images/heroes/thumbnails-64.png");
   display: block;
   position: relative;
   z-index: 2;
