--- a/themes/foundation/css/card-game.css
+++ b/themes/foundation/css/card-game.css
@@ -5,11 +5,7 @@
 .card-list > li > a {
 
 }
-/*
-.hearthstone-link {
 
-}
-/**/
 .hearthstone-link img.loading {
     opacity: 0.6;
     background-image: url(../images/preloader-horizontal.gif);
@@ -18,7 +14,7 @@
     width: 160px;
     height: 160px;
 }
-/**/
+
 .flavor {
     color: #ffff00;
 }
@@ -35,4 +31,21 @@
 }
 .druid {
     background-image: url(themes/foundation/images/hearthstone/classes.png);
+}
+
+.card-list li.hearthstone-link:focus a {
+    position: relative;
+    width: 900px;
+    height: 590px;
+}
+
+.card-list li.hearthstone-link:focus img {
+    width: 40%;
+}
+
+.card-list li.hearthstone-link:focus div.info {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
 }
