--- a/themes/foundation/css/common.less
+++ b/themes/foundation/css/common.less
@@ -6,6 +6,7 @@
 @headerColor: inherit;
 @linkColor: #d9d9d9;
 @BlizzgameColor: #333d4f;
+@BlizzgameColorHover: #2C384E;
 @BlizzgameDark: #162331;
 @ImageDir: "@{ThemeDir}/images/";
 @blueColor: #00B4FF;
@@ -65,7 +66,7 @@ h1, h2, h3, h4, h5, h6 {
       color: #999;
     }
     &:not(.has-form):not(.active):hover > a:not(.button) {
-      background: @BlizzgameColor;
+      background: @BlizzgameColorHover;
       color: #fff;
     }
   }
@@ -80,12 +81,12 @@ h1, h2, h3, h4, h5, h6 {
     &.active:not(.has-form) {
       a:not(.button):hover,
       a:not(.button) {
-        background: @BlizzgameColor;
+        background: @BlizzgameColorHover;
 
       }
     }
     &:not(.has-form) a:not(.button):hover {
-      background: @BlizzgameColor;
+      background: @BlizzgameColorHover;
       color: #fff;
 
     }
