--- a/themes/foundation/css/comic-view.css
+++ b/themes/foundation/css/comic-view.css
@@ -1,5 +1,6 @@
 body {
   background: #162331 no-repeat 50% 50%;
+  overflow: hidden;
 }
 
 .wowbook {
@@ -41,10 +42,10 @@ a:visited {
   /* Opera/IE 8+ */
 
   height: 100%;
-  max-width: 900px;
+  max-width: 1100px;
   margin: auto;
-  padding-top: 86px;
-  padding-bottom: 20px;
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
 h1,
 h2 {
