CARDGAME  добавил к полю класс значение common; заменил кнопки классов на иконки. Локализация.

--- a/themes/foundation/css/card-game.css
+++ b/themes/foundation/css/card-game.css
@@ -82,3 +82,50 @@ li.focused .th .details p {
     text-align: left;
     color: inherit;
 }
+
+.card-classes input {
+    display: none;
+}
+.card-classes label {
+    background-image: url(../images/wow/wowclasess.png);
+    background-size: 256px 256px;
+    width: 64px;
+    height: 64px;
+}
+
+.card-classes .all {
+    background-position: 0 -192px;
+}
+.card-classes .warrior {
+    background-position: 0 0;
+}
+
+.card-classes .mage {
+    background-position: -64px 0;
+}
+
+.card-classes .rogue {
+    background-position: -126px 0;
+}
+.card-classes .druid {
+    background-position: 64px 0;;
+}
+
+.card-classes .hunter {
+    background-position: 0 -64px;
+}
+.card-classes .shaman {
+    background-position: -64px -64px;
+}
+.card-classes .priest {
+    background-position: -126px -64px;
+}
+.card-classes .warlock {
+    background-position: 64px -64px;
+}
+.card-classes .paladin {
+    background-position: 0 -126px;
+}
+.card-classes .common {
+    background-position: 64px -126px;
+}
