--- a/themes/foundation/css/card-game.css
+++ b/themes/foundation/css/card-game.css
@@ -27,23 +27,12 @@
 .druid {
     background-image: url(themes/foundation/images/hearthstone/classes.png);
 }
-.card-img {
-    -moz-transition: all 0.8s;
-    -o-transition: all 0.8s;
-    -webkit-transition: all 0.8s;
-    transition: all 0.8s;
-
-    /* zoom acceleration */
-    -webkit-transform: translateZ(0);
-    -moz-transform: translateZ(0);
-    -ms-transform: translateZ(0);
-    -o-transform: translateZ(0);
-    transform: translateZ(0);
-}
 
 .card-list {
     position: relative;
 }
+
+
 
 .preloader {
     height: 400px;
@@ -84,6 +73,25 @@
     line-height: 1;
 }
 
+.card-list > li a.hearthstone-link {
+    position: relative;
+}
+.card-list > li .has-art-link {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.card-list > li .has-art-link:before {
+    content: "";
+    width: 20px;
+    height: 20px;
+    background-image: url(../images/card-game/view_link.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    float: left;
+}
+
 li.focused .th .details p {
     text-align: left;
     color: inherit;
@@ -101,38 +109,46 @@ li.focused .th .details p {
     height: 64px;
     padding: 0;
     background-color: #fff;
+    border: 4px solid #ddd;
+    border-radius: 50px;
 }
 
 .card-classes .all {
-    background-position: 0 -192px;
+    background-position: -4px -196px;
 }
 .card-classes .warrior {
-    background-position: 0 0;
+    background-position: -4px -4px;
 }
 .card-classes .mage {
-    background-position: -64px 0;
+    background-position: -68px -4px;
 }
 .card-classes .rogue {
-    background-position: -126px 0;
+    background-position: -130px -4px;
 }
 .card-classes .druid {
-    background-position: 64px 0;;
+    background-position: 64px -3px;
 }
 .card-classes .hunter {
-    background-position: 0 -64px;
+    background-position: -4px -68px;
 }
 .card-classes .shaman {
-    background-position: -64px -64px;
+    background-position: -66px -68px;
 }
 .card-classes .priest {
-    background-position: -126px -64px;
+    background-position: -130px -68px;
 }
 .card-classes .warlock {
-    background-position: 64px -64px;
+    background-position: 64px -68px;
 }
 .card-classes .paladin {
-    background-position: 0 -126px;
+    background-position: -4px -130px;
+}
+.card-classes .death-knight {
+    background-position: -68px -130px;
+}
+.card-classes .monk {
+    background-position: -128px -136px;
 }
 .card-classes .common {
-    background-position: 64px -126px;
+    background-position: 62px -132px;
 }
